--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="keywords" content="La panthère entreprise web design Lyon">
+    <meta name="description" content="Contactez nous ! La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -76,11 +76,12 @@
 
 	<!-- bloc-7 -->
 	<section>
+		<h2 class="text-center">Envoyez nous un message !</h2>
 		<div class="bloc bgc-white l-bloc" id="bloc-7">
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-6">
-						<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+						<form id="form_1" novalidate>
 							<div class="form-group">
 								<label for="name">Nom</label>
 								<input id="name" class="form-control" required aria-required="true" />
@@ -111,7 +112,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section>	
 	<!-- bloc-7 END -->
 
 	<!-- Footer - bloc-8 -->
@@ -126,22 +127,22 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html" aria-label="lien vers page twitter"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" href="https://www.twitter.com" aria-label="lien vers page twitter"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html" aria-label="lien vers page facebook"><span class="fa fa-facebook icon-md"></span></a>
+									<a class="social" href="https://www.facebook.com" aria-label="lien vers page facebook"><span class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html" aria-label="lien vers page dribbble"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" href="https://www.dribbble.com" aria-label="lien vers page dribbble"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html" aria-label="lien vers page instagram"><span class="fa fa-instagram icon-md"></span></a>
+									<a class="social" href="https://www.instagram.com" aria-label="lien vers page instagram"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
 						</div>
