--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-	<meta keywords="La panthère entreprise web design Lyon">
+	<meta name="keywords" content="La panthère entreprise web design Lyon">
     <meta name="description" content="La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -37,7 +37,7 @@
 			<div class="container bloc-sm">
 				<nav class="navbar row">
 					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Logo de La Panthère" height="40" /></a>
+						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="La Panthère" height="40" /></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 						</button>
@@ -48,7 +48,7 @@
 								<a href="index.html">Accueil</a>
 							</li>
 							<li>
-								<a href="page2.html">Contact</a>
+								<a href="contact.html">Contact</a>
 							</li>
 						</ul>
 					</div>
@@ -69,7 +69,7 @@
 							La Panthère - Agence de Web Design
 						</h1>
 						<div class="text-center">
-							<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+							<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 						</div>
 					</div>
 				</div>
@@ -144,7 +144,7 @@
 						</h2>
 						<p class="text-center white">
 							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br>
-							<a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
+							<a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
 						</p>
 					</div>
 				</div>
@@ -216,7 +216,7 @@
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
 					<div class="col-sm-12 text-center">
-						<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+						<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 					</div>
 				</div>
 			</div>
@@ -236,22 +236,22 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html" aria-label="lien vers page twitter"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" href="https://www.twitter.com" aria-label="lien vers page twitter"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html" aria-label="lien vers page facebook"><span class="fa fa-facebook icon-md"></span></a>
+									<a class="social" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" aria-label="lien vers page facebook"><span class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html" aria-label="lien vers page dribbble"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" href="https://www.dribbble.com" aria-label="lien vers page dribbble"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html" aria-label="lien vers page instagram"><span class="fa fa-instagram icon-md"></span></a>
+									<a class="social" href="https://www.instagram.com" aria-label="lien vers page instagram"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
 						</div>
